[package]
name = "tomato"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dbus = ["dep:zbus", "dep:smol"]
lua = ["dep:mlua"]

[dependencies]
zbus = { version = "5.5.0", optional = true }
smol = { version = "2.0.2", optional = true }
mlua = { version = "0.10.3", features = ["lua54", "module"], optional = true }